--- a/app/views/dashboards/resume.html.erb
+++ b/app/views/dashboards/resume.html.erb
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="span8 resumeArea">
-			<%= render 'dashboards/edit_resume'%>
+			<%= render 'dashboards/edit_resume_2'%>
 		</div>
 </div>
 </div>
