--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -11,3 +11,18 @@
 		
 	</div>
 </div>
+
+
+<div class="row-fluid profileSpot">
+	<div class="span5">
+		<div class="dashboardArea">
+			<h1>Have You Ever </br>Managed 5+ people? (Call the model of q's)</h1>
+		</div>
+	</div>
+
+	<div class="span7">
+		<%= form_for :proxy do |f| %>
+			<%= f.text_area :proxy, :class => "proxy" %>
+		<% end %>
+	</div>
+</div>
