--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,7 +2,9 @@
 	<div class="row-fluid">
 		<div class="span3">
 			<h2><%= @company.name %></h2>
-			<p><%= link_to 'Edit company details', edit_company_path %></p>
+			<% if can? :update, @company %>
+				<p><%= link_to 'Edit company details', edit_company_path %></p>
+			<% end %>
 			<p>Industry: <%= @company.industry %></p>
 			<p>Website: <%= link_to "#{@company.website}", "http://#{@company.website}" %></p>
 			<p>HR Email: <%= @company.hr_email %></p>
@@ -14,14 +16,16 @@
 		</div>
 		
 		<div class="span3">
-			<legend>Create a job</legend>
-			<%= form_for @jobs, :as => :jobs do |f| %>
-				<%= f.text_field :name, :placeholder => "Name" %>
-				<%= f.text_field :discipline, :placeholder => "Discipline" %>
-				<%= f.text_field :info, :placeholder => "Information" %>
-				<%= f.hidden_field :id, :value => params[:id] %>
+			<% if can? :create, @job %>
+				<legend>Create a job</legend>
+				<%= form_for @jobs, :as => :jobs do |f| %>
+					<%= f.text_field :name, :placeholder => "Name" %>
+					<%= f.text_field :discipline, :placeholder => "Discipline" %>
+					<%= f.text_field :info, :placeholder => "Information" %>
+					<%= f.hidden_field :id, :value => params[:id] %>
 					
-				<%= f.submit %>
+					<%= f.submit %>
+				<% end %>
 			<% end %>
 			
 			<% if @companyJobs != nil %>
@@ -32,16 +36,17 @@
 		</div>
 	</div>
 	
-	<div class="row-fluid">
-		<div class="span12">
-			<%= form_for @boards, :as => :boards do |f| %>
-				<%= f.text_field :name, :placeholder => "Board Name" %>
-				<%= f.hidden_field :company_id, :value => params[:id] %>
-				<%= f.submit%>
-			<% end %>
-		</div>
-	</div>	
-	
+ 	<% if can? :create, @board %>
+		<div class="row-fluid">
+			<div class="span12">
+				<%= form_for @boards, :as => :boards do |f| %>
+					<%= f.text_field :name, :placeholder => "Board Name" %>
+					<%= f.hidden_field :company_id, :value => params[:id] %>
+					<%= f.submit%>
+				<% end %>
+			</div>
+		</div>	
+	<% end %>
 	<div class="row-fluid">
 		<div class="span12">
 			<% @allBoards.each do |board| %>
