--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -14,7 +14,7 @@
 						<h6>ADD SOME JOBS!</h6>
 					<% else %>
 							<% @appList.each do |apps| %>
-								<li>THE JOB ID: <%= apps.job_id %></li>
+								<li>THE JOB YOUR FOLLOWING ID: <%= apps.job_id %></li>
 						<% end %>
 					<% end %>
 					
@@ -22,19 +22,21 @@
 				</div>
 			
 				
-				<div class="row-fluid profileSpot">
-					<ul>
-						<li><strong>LINKS - Remove when admin set up</strong></li>
-						<li><%= link_to 'Problems-Page', problems_path %></li>
-						<li>Companies:</li>
+				<% if can? :create, @job %>
+					<div class="row-fluid profileSpot">
 						<ul>
-							<% Company.all.each do |company| %>
-								<li><%= link_to "#{company.name}", company %></li>
-							<% end %>
+							<li><strong>LINKS - Remove when admin set up</strong></li>
+							<li><%= link_to 'Problems-Page', problems_path %></li>
+							<li>Companies:</li>
+							<ul>
+								<% Company.all.each do |company| %>
+									<li><%= link_to "#{company.name}", company %></li>
+								<% end %>
+							</ul>
+							<li><%= link_to 'New company page', new_company_path %>
 						</ul>
-						<li><%= link_to 'New company page', new_company_path %>
-					</ul>
-				</div>			
+					</div>			
+				<% end %>
 			</div>
 		
 			<div class="span3 sidebar">
