--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -6,7 +6,9 @@
 			<%= @job.info %>
 		</div>
 		<div class="span3">
-			<%= link_to 'Edit this Job', edit_job_path%>
+			<% if can? :update, @job %>
+				<%= link_to 'Edit this Job', edit_job_path%>
+			<% end %>
 		</div>
 	</div>
 </div>
