added error pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,12 @@ $textAqua: #DEFAF6;
 		text-align:center
 	}
 	
+	.errorTitle{
+		padding-top:50px;
+		color:$siteGreen;
+
+	}
+	
 	.listCopy {
 		padding-top:40px;
 		
