added error pages and email changes

--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -5,6 +5,7 @@
 		
 		<div class="offset3 span6">
 		<div class="errorTitle">
+			<%= link_to image_tag('error.png'), root_path %>
 			<h4>Oops! We can't find the page you're looking for</h4>
 			<%= link_to 'Go Home', root_path%>
 		</div>
