minor word changes

--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,14 +1,11 @@
 <div class="container-fluid">
 	<div class="row-fluid">
-		
-		
-		
 		<div class="offset3 span6">
 		<div class="errorTitle">
 			<%= link_to image_tag('error.png'), root_path %>
-			<h4>Oops! We can't find the page you're looking for</h4>
-			<%= link_to 'Go Home', root_path%>
+				<h4>Oops! We can't find the page you're looking for, sorry!</h4>
+				<p>We can't seem to get the pages you wanted. Email us at team@resumequery.com if you 
+				have any suggestions or head to our'<%= link_to 'home page', root_path %>.
 		</div>
-		
 	</div>
 </div>
