changed dashboard & email settings

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -22,6 +22,7 @@
 					<%= f.text_field :name, :placeholder => "Name" %>
 					<%= f.text_field :discipline, :placeholder => "Discipline" %>
 					<%= f.text_field :info, :placeholder => "Information" %>
+					<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
 					<%= f.hidden_field :id, :value => params[:id] %>
 					
 					<%= f.submit %>
