--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -3,9 +3,10 @@
 		<div class="offset3 span6">
 		<div class="errorTitle">
 			<%= link_to image_tag('error.png'), root_path %>
-				<h4>Oops! We can't find the page you're looking for, sorry!</h4>
-				<p>We can't seem to get the pages you wanted. Email us at team@resumequery.com if you 
-				have any suggestions or head to our'<%= link_to 'home page', root_path %>.
+				<h4>Sorry, we haven't been able to find the page you wanted.</h4>
+				<h5>We can't seem to get the pages you wanted. Email us at team@resumequery.com if you 
+				have any suggestions or head to our <%= link_to 'home page', root_path %>.</h5>
+				<p>Our heartfelt apologies for this inconvenience!</p>
 		</div>
 	</div>
 </div>
