--- a/app/views/dashboards/_appmanage.html.erb
+++ b/app/views/dashboards/_appmanage.html.erb
@@ -7,7 +7,7 @@
 				<% company = Company.find_by_id(job.company_id)%>
 				<li>
 					<%= link_to job do %>
-						<strong><%= company.name %>'s</strong> <%= job.name %> 
+						<strong><%= company.name %></strong> <%= job.name %> 
 						&nbsp &nbsp &nbsp Due Date: <%= job.due_date%></li>
 					<% end %>
 					<%= form_for apps, :as => :applist do |f| %>
@@ -15,7 +15,6 @@
 						<%= f.hidden_field :id, :value => apps.id %>
 						<%= f.submit %>
 					<% end %>
-
 		<% end %>
 		</ul>
 <% end %>
