--- a/app/views/dashboards/_steps.html.erb
+++ b/app/views/dashboards/_steps.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<div class="span12 dashboardBar">
 		<p><%= current_user.first_name%>'s ResumeQuery Dashboard</p>
-		<ul class="inline"<>
+		<ul class="inline">
 			<li><%= link_to '1. Write up your resume', resume_path%> </li>
 			<li><%= link_to '2. Bring out your value'%> </li>
 			<li><%= link_to '3. Review your resume'%> </li>
