--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -1,6 +1,7 @@
 <div class="signedInHeader">
-	<div class="container-fluid">
-		<div class="row-fluid">
+	<div class="container">
+		<div class="row">
+			
 			
 			<div class="span2">
 				<%= link_to image_tag('resumeQuery_white.png'), root_path %> 
