--- a/app/views/dashboards/_userbar.html.erb
+++ b/app/views/dashboards/_userbar.html.erb
@@ -2,7 +2,8 @@
 	<div class="span12 profileSpot">
 		<div class="row-fluid">
 			<div class="span9">
-				<h3>The jobs you're following</h3>
+				<h3>Hi <%= current_user.first_name%>!</br>
+					 These are the jobs you're following:</h3>
 				<p>Manage the status of the jobs you're applying for and find out about more companies.
 					Click on the company name for more information</p>
 			</div>
