--- a/app/views/dashboards/sidebar/_report_problems.html.erb
+++ b/app/views/dashboards/sidebar/_report_problems.html.erb
@@ -1,5 +1,5 @@
 <div class="profileSpot">
-	<h5>Submit a company, job or feature request</h5>
+	<p>Submit a company, job or feature request</p>
 	<%= form_for @problem, :as => :problems do |f| %>
 		<%= f.text_area :problem, :placeholder => 
 			 "We really appreciate your input!" %>
