--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -29,7 +29,7 @@
 				<% end %>
 			</div>
 		
-			<div class="offset1 span2 sidebar">
+			<div class="span3 sidebar">
 				<!-- The if-false statements here are 
 				hiding sidebar features yet to be completed -->
 				
