--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -9,7 +9,7 @@
 			<p>Website: <%= link_to "#{@company.website}", "http://#{@company.website}" %></p>
 			<p>HR Email: <%= @company.hr_email %></p>
 			<p>PHOTOR:</p>
-			<p><% image_tag @company.logo.url %></p>
+			<p><%= image_tag @company.logo.url %></p>
 		</div>
 		
 		<div class="span6">
