--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,15 +1,4 @@
-<div class="sellingpoints">
-	<h4>ResumeQuery uses what works to separate you from the rest</h4>
-	<p>The information we put onto our website is based
-		off what has worked for other applicants in the past, 
-		continuously updated with relevant information - not
-		just HR speak</p>
-	</br>
-	<div class="divider" style="width:100%;background-color:white;height:1px;">
-	</div>
-	</br>
-	<h4>We never take money from employers</h4>
-	<p>We're committed to help <strong>you</strong> get employed and
-		we won't compromise on our independence to achieve that.</p>
-	</br> 
-</div>
+<h1>Bring out your real </br>accomplishments to your resume </h1>
+</br>
+<h4>Show your true worth to the right employers with our
+	 resume tools. </h4>
