--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -2,6 +2,7 @@
 	<%= f.text_field :name %>
 	<%= f.text_field :discipline %>
 	<%= f.text_field :info %>
+	<%= f.text_field :link%>
 	<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
 	<%= f.hidden_field :id, :value => params[:id] %>
 		
