--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,9 @@ $siteRed: #9e0b0f;
 $siteText: #333333;
 $offWhite: #FFF8E8;
 $textAqua: #DEFAF6;
+$lightGrey: #CCCCCC;
+$lightGreen: #B5F7C2;
+$linkBlue: #19558d;
 
 
 @font-face {
@@ -108,10 +111,10 @@ $textAqua: #DEFAF6;
 		line-height:40px;
 		margin-bottom:20px;
 		a{
-			color:white;
+			color:$lightGreen;
 		}
 		a:hover{
-			color:$standardGrey;
+			color:white;
 			img {
 				background-color:$topGreen;
 			}
@@ -268,7 +271,7 @@ $textAqua: #DEFAF6;
 	}
 	
 	.profileSpot {
-		border-bottom:1px solid $standardGrey;
+		border-bottom:1px solid $lightGrey;
 		padding:15px 0px;
 		textarea {
 			height:90px;
@@ -352,5 +355,53 @@ $textAqua: #DEFAF6;
 	}
 	
 	.sidebar {
-		text-align:center;
+	
+	}
+	
+	.appManage {
+		border-bottom: 1px solid $lightGrey;
+		font-size:15px;
+		line-height:18px;
+		padding:10px 0px 0px;
+		.info{
+			color:$standardGrey;
+			font-size:12px;
+			line-height:12px;
+		}
+		a{
+			color:$linkBlue;
+		}
+		a:hover{
+			text-decoration:underline;
+		}
+		select{
+			margin: 0px;
+			height:35px;
+			width:95%;
+			background-color:$siteAqua;
+			color:$textAqua;
+		}
+		.span3{
+			padding-left:20px;
+		}
+		
+	}
+	
+	.appArea {
+
+	}
+	
+	.leftBar{
+		width:100%;
+
+		input{
+			width:100%;
+			height:25px;
+			font-size:18px;
+
+		}
+		.btn-success{
+			height:40px;
+			width:104%;
+		}
 	}
