--- a/app/views/dashboards/_appmanage.html.erb
+++ b/app/views/dashboards/_appmanage.html.erb
@@ -1,20 +1,38 @@
 <% if @appList.count == 0 %>
-	<h6>ADD SOME JOBS!</h6>
+	<h6>Have job following placeholder</h6>
 <% else %>
-		<ul>
-			<% @appList.each do |apps| %>
-				<% job = Job.find(apps.job_id) %>
-				<% company = Company.find_by_id(job.company_id)%>
-				<li>
-					<%= link_to job do %>
-						<strong><%= company.name %></strong> <%= job.name %> 
-						&nbsp &nbsp &nbsp Due Date: <%= job.due_date%></li>
-					<% end %>
-					<%= form_for apps, :as => :applist do |f| %>
-						<%= f.select :status, [['Untouched', 'untouched'], ['Researched', 'researched']]%>	
-						<%= f.hidden_field :id, :value => apps.id %>
-						<%= f.submit %>
-					<% end %>
+		<% @appList.each do |apps| %>
+			<% job = Job.find(apps.job_id) %>
+			<% company = Company.find_by_id(job.company_id)%>
+			<div class="appManage">
+				<div class="row">
+					<div class="span3">
+								<%= form_for apps, :as => :applist do |f| %>
+									<%= f.select :status, [['Untouched', 'untouched'], ['Researched', 'researched']],{},
+												    :onchange => "this.form.submit();"%>	
+									<%= f.hidden_field :id, :value => apps.id %>
+								<% end %>
+					</div>
+					
+					<div class="span9">
+						<%= link_to job do %>
+							<strong><%= company.name %></strong></br>
+							<%= job.name %>
+							<% if job.due_date != nil%>	
+		  						<span class="pull-right"> Closes <%= job.due_date.strftime("%B %e")%></span>
+							<% end %>
+						<% end %>
+	
+						<% if false %>
+						<%= link_to "x", apps, method: :delete,
+																			  data: { confirm: 'You Sure?'}%>													
+						<div class="info">
+							<%= truncate(job.info, :length => 140)%>
+						</div>																	
+						<% end %>
+					</div>
+				</div>
+					
+			</div>
 		<% end %>
-		</ul>
 <% end %>
