--- a/app/views/dashboards/_userbar.html.erb
+++ b/app/views/dashboards/_userbar.html.erb
@@ -1,11 +1,11 @@
 <div class="row-fluid">
 	<div class="span12 profileSpot">
 		<div class="row-fluid">
-			<div class="span9">
+			<div class="span10">
 				<h3>Hi <%= current_user.first_name%>!</br>
 					 These are the jobs you're following:</h3>
 				<p>Manage the status of the jobs you're applying for and find out about more companies.
-					Click on the company name for more information</p>
+					Click on the company name for more information.</p>
 			</div>
 		</div>
 	</div>
