--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 			<%=render 'staticpages/copywritearea'%>		
 		<% end %>
 		<% flash.each do |key, message| %>
-			<%= content_tag(:div, message, class: "alert alert-#{key}") %>
+
+			<%= content_tag :div, message,class: "alert alert-#{key}", :id => "flash" if message.length > 0 %>
 		<% end %>
 		<%= yield %>
 		<%=render 'layouts/footer'%>
