--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,4 +1,7 @@
-<h1>Bring out your real </br>accomplishments to your resume </h1>
-</br>
-<h4>Show your true worth to the right employers with our
-	 resume tools. </h4>
+<div style="text-align:center;">
+<h1>ResumeQuery makes it easier to manage your
+	internship and graduate job applications.</h1>
+	</br>
+<h4>We've just opened up our website for UNSW students.</br> 
+	 Sign up with your zmail now.</h4>
+</div>
