--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -7,7 +7,7 @@
 				<div class="copywriteAreaRight">
 				</br>
 				<p>Happy <%= Time.now.strftime("%A") %> ! &nbsp  
-				<%= link_to 'Sign In!', new_user_session_path, :class=> "btn btn-small "%></p>
+				<%= link_to 'Log In', new_user_session_path, :class=> "btn btn-small btn-info"%></p>
 				</div>
 			</div>
 		</div>
