--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,6 @@ $topGreen: #54bb62;
 $standardGrey: #636363;
 $siteOrange: #fbe7d1;
 $siteAqua: #4ea39c;
-$siteRed: #9e0b0f;
 $siteText: #333333;
 $offWhite: #FFF8E8;
 $textAqua: #DEFAF6;
@@ -23,7 +22,6 @@ $linkBlue: #19558d;
          url('Oswald-Regular-webfont.svg#OswaldBook') format('svg');
 	    font-weight: normal;
 	    font-style: normal;
-
 	}
 	
 	
@@ -46,11 +44,10 @@ $linkBlue: #19558d;
 		
 	}
 	
-	a:hover {
+	a:hover{
 		text-decoration:none;
 	}
-	
-	
+		
 	
 /* Copywrite Area */
 
@@ -387,9 +384,6 @@ $linkBlue: #19558d;
 		
 	}
 	
-	.appArea {
-
-	}
 	
 	.leftBar{
 		width:100%;
@@ -403,5 +397,15 @@ $linkBlue: #19558d;
 		.btn-success{
 			height:40px;
 			width:104%;
+		}
+	}
+	
+	.jobList{
+		margin-top:30px;
+		font-size:15px;
+		border-top:1px solid $siteGreen;
+		.submitLink {
+			background-color: transparent;
+			border: none;
 		}
 	}
