--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,42 +1,40 @@
-<div class="container-fluid">
-	<div class="row-fluid">
-
-		<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<div class="container">
+	<div class="row">
+		<div class="span6">
+		<h3>Edit <%= resource_name.to_s.humanize %> Details</h3>
 		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 		  <%= devise_error_messages! %>
-			
-		  <div><%= f.label :first_name %><br />
-		  <%= f.text_field :first_name, :autofocus => true %></div>
+		 
+		  <h6>Your Personal Details</h6>
+		  <%= f.text_field  :first_name, :autofocus => true, :placeholder => "First Name" %>
+		  <%= f.text_field  :last_name,  :autofocus => true, :placeholder => "Last Name" %>
+        </br>
+		  <%= f.email_field :email,      :autofocus => true, :placeholder => "Email" %>
+		  <%= f.text_field :mobile_number, :placeholder => "Optional Contact Number" %>
 		
-		  <div><%= f.label :last_name %> (We will always keep your name private to others)<br />
-		  <%= f.text_field :last_name, :autofocus => true %></div>
-
-		  <div><%= f.label :email %>
-		  <%= f.email_field :email, :autofocus => true %></div>
 		
-		  <%= f.label :mobile_number%>
-		  <%= f.text_field :mobile_number, :placeholder => "Optional Contact Number" %></p>
-
 		  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
 		    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
 		  <% end %>
-
+		
+		  <h6>Password Details</h6>
 		  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
 		  <%= f.password_field :password, :autocomplete => "off" %></div>
 
-		  <div><%= f.label :password_confirmation %><br />
+		  <div><%= f.label :password_confirmation %>
 		  <%= f.password_field :password_confirmation %></div>
-
-		  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+		  
+		  <div class="alert">
+		  <div><%= f.label :current_password, :placeholder => "Your Current Password" %> <i>(we need your current password to confirm your changes)</i><br />
 		  <%= f.password_field :current_password %></div>
-
-		  <div><%= f.submit "Update" %></div>
+		  </div>  
+		
+		  <div><%= f.submit "Save Changes", :class => "btn" %></div>
 		<% end %>
 
-		<h3>Cancel my account</h3>
+		<h3>Delete my account</h3>
 
-		<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
+		<p><%= button_to "Cancel my account", registration_path(resource_name), :class => "btn", :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+		</div>
 	</div>
 </div>
