--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,14 +8,12 @@
 				<div class="leftBar pull-right">
 					<h2>Sign Up</h2>	
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-						<div class="errors">
-							<%= devise_error_messages! %>
-						</div>
+						
 						<%= f.text_field :first_name, :placeholder => "Your First Name"%> </br>
 						<%= f.email_field :email, :placeholder => "Your Email" %></br> 
 						<%= f.password_field :password, :placeholder => "New Password" %>
 							<% if false %>
-								<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %></p>
+								<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %>
 							<% end %>
 						</br>
 						<div><%= f.submit "Sign Up", :class => "btn btn-success" %></div>
@@ -23,6 +21,9 @@
 					<% if false %>
 						<%= render "devise/shared/links" %>	
 					<% end %>
+					<div class="errors">
+						<%= devise_error_messages! %>
+					</div>
 				</div>
 			</div>
 		</div>
