--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,19 @@
 		<% else %>
 			<%=render 'staticpages/copywritearea'%>		
 		<% end %>
-		<% flash.each do |key, message| %>
-
-			<%= content_tag :div, message,class: "alert alert-#{key}", :id => "flash" if message.length > 0 %>
+		
+		<% if flash.count > 0 %>
+		<div class="container">
+			<div class="row">
+				<div class="span12">
+				<% flash.each do |key, message| %>
+					<%= content_tag :div, message,class: "alert alert-#{key}", :id => "flash" if message.length > 0 %>
+				<% end %>
+				</div>
+			</div>
+		</div>
 		<% end %>
+		
 		<%= yield %>
 		<%=render 'layouts/footer'%>
 		<%=render 'shared/google_analytics' if Rails.env.production? %>
