--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,7 +1,6 @@
-<div style="text-align:center;">
-<h1>ResumeQuery makes it easier to manage your
-	internship and graduate job applications for the top firms.</h1>
-	</br>
-<h4>We've just opened up our website for UNSW students.</br> 
-	 Sign up with your zmail now.</h4>
+<div>
+	<h1>Manage your job applications easier & find out what's really needed</h1>
+		</br>
+	<h4>We've just opened up our website for UNSW students.</br> 
+		 Sign up with your zmail now.</h4>
 </div>
