--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,13 +1,19 @@
-<%= form_for @jobs, :as => :jobs do |f| %>
-	<%= f.text_field :name %>
-	<%= f.text_field :discipline %>
-	<%= f.text_field :info %>
-	<%= f.text_field :link%>
-	<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
-	<%= f.hidden_field :id, :value => params[:id] %>
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<%= form_for @jobs, :as => :jobs do |f| %>
+				<%= f.text_field :name, :placeholder => "Name" %></br>
+				<%= f.text_field :discipline, :placeholder => "Discipline" %></br>
+				<%= f.text_area :info, :placeholder => "Information" %></br>
+				<%= f.text_field :link, :placeholder => "Website Link in www.something.com form" %></br>
+				<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY" %></br>
+				<%= f.hidden_field :id, :value => params[:id] %></br>
 		
-	<%= f.submit %>
-<% end %>
+				<%= f.submit %>
+			<% end %>
 
-<%= link_to "Delete This Job", @jobs, method: :delete,
-													  data: { confirm: 'You Sure?'}%>
+			<%= link_to "Delete This Job", @jobs, method: :delete,
+																  data: { confirm: 'You Sure?'}%>
+		</div>
+	</div>
+</div>
