--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -1,28 +1,25 @@
 <div class="container">
 	<div class="row">
-		<%= render 'staticpages/fourSteps' %>
-		
-		
-		<pre>University of New South Wales</br>Commerce </pre>
-		<p>Other 'modes' include Computer Science & Law. First Year mode as well.</p>
-		<p>"The best way to get what you want is to deserve it " -Charlie Munger</p>
-		<!-- Remove line when done-->
-		<pre>Put the four steps here</pre></br>
-		
-	</div>
-</div>
-
-
-<div class="row-fluid profileSpot">
-	<div class="span5">
-		<div class="dashboardArea">
-			<h1>Have You Ever </br>Managed 5+ people? (Call the model of q's)</h1>
+		<div class="span12">
+			<div class="listCopy">
+			<div class="sellingpoints">
+				<h4>ResumeQuery uses what works to separate you from the rest</h4>
+				<p>The information we put onto our website is based
+					off what has worked for other applicants in the past, 
+					continuously updated with relevant information - not
+					just HR speak</p>
+				</br>
+				<h4>We won't take money from employers</h4>
+				<p>We want to help <strong>you</strong> get employed and
+					we won't compromise on our independence to achieve that.</p>
+				</br> 
+			
+				<h4>Your Data is not for sale</h4>
+				<p>We won't sell your data out to employers or anyone else either.</p>
+				</br>
+			
+			</div>
+			</div>
 		</div>
-	</div>
-
-	<div class="span7">
-		<%= form_for :proxy do |f| %>
-			<%= f.text_area :proxy, :class => "proxy" %>
-		<% end %>
 	</div>
 </div>
