--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,17 +1,16 @@
 <div class="container">
 	<div class="row">
 		<div class="span7 jobIndex">
-				<h3>All Job Opportunities</h3>
-				<ul class="unstyled">
-					<% @job.each do |j| %>
-						<%= link_to j do %>
-							<li><strong><%= j.find_company.name %></strong> - <%= j.name %> - 
-							<span class="pull-right">Closes: <%= j.due_date.strftime("%B %e")%></span>
-							</li>
-						<% end %>
+			<h3>All Job Opportunities</h3>
+			<ul class="unstyled">
+				<% @job.each do |j| %>
+					<%= link_to j do %>
+						<li><strong><%= j.find_company.name %></strong> - <%= j.name %> - 
+						<span class="pull-right">Closes: <%= j.show_due_date%></span>
+						</li>
 					<% end %>
+				<% end %>
 		</div>
-		
 		<div class="span3 pull-right">
 			<%= render 'shared/report_problems'%>
 		</div>
