--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,7 +6,7 @@
 				<% @job.each do |j| %>
 					<%= link_to j do %>
 						<li><strong><%= j.find_company.name %></strong> - <%= j.name %> - 
-						<span class="pull-right">Closes: <%= j.show_due_date%></span>
+						<span class="pull-right"><%= j.show_due_date%></span>
 						</li>
 					<% end %>
 				<% end %>
