added a few fields to the appmanage select menu on the dashboard

--- a/app/views/dashboards/_appmanage.html.erb
+++ b/app/views/dashboards/_appmanage.html.erb
@@ -15,13 +15,13 @@
 			<div class="row">
 				<div class="span3">
 					<%= form_for apps, :as => :applist do |f| %>
-						<%= f.select :status, [['Untouched', 'untouched'], ['Researched', 'researched'],
-						                       ['Unfollow', 'unfollow']],{},
+						<%= f.select :status, [['Not Started'], ['Researched'], ['Sent Cover'], ['Sent Resume'],
+						                       ['Sent Cover'],['Completed All'],['Unfollow', 'unfollow']],{},
 									    :onchange => "this.form.submit();"%>	
 						<%= f.hidden_field :id, :value => apps.id %>
 					<% end %>
 				</div>
-			
+			 
 				<div class="span9">
 					<%= link_to job do %>
 						<strong><%= company.name %></strong></br>
