--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -17,6 +17,10 @@
 				<h4>Your Data is not for sale</h4>
 				<p>We won't sell your data out to employers or anyone else either.</p>
 				</br>
+				
+				<h4>We'll just list the key employers for your uni</h4>
+				<p> We won't list everything under the sun to help you manage some of your key opportunities</p>
+				</br>
 			
 			</div>
 			</div>
